[package]
name = "hw4-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
debug = true

[lib]
name = "keras"
path = "src/lib.rs"

[[bin]]
name = "keras-library"
path = "src/main.rs"
